refactor(ValidatorUtils): use private constants and rename parameters